multi dimension 데이터이기 때문에 overfitting 문제가 존재할 수 있어서 Ridge regression 방식을 사용해 Regularization을 사용해 보았음

--- a/Regression_Training.ipynb
+++ b/Regression_Training.ipynb
@@ -108,6 +108,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ridge(alpha=1, copy_X=True, fit_intercept=True, max_iter=None, normalize=False,\n",
+       "      random_state=None, solver='auto', tol=0.001)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Ridge\n",
+    "reg = Ridge(alpha=1)\n",
+    "reg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train MAE : 146722.99203575164\n",
+      "train RMSE : 182619.62770687687\n",
+      "train R_squre : 0.7359324967439735\n",
+      "test MAE : 141065.99752493342\n",
+      "test RMSE : 178349.63325454664\n",
+      "test R_squre : 0.7343178391407834\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_train_hat = reg.predict(X_train)\n",
+    "print('train MAE :', mean_absolute_error(y_train, y_train_hat))\n",
+    "print('train RMSE :', mean_squared_error(y_train, y_train_hat)**0.5)\n",
+    "print('train R_squre :', r2_score(y_train, y_train_hat))\n",
+    "\n",
+    "y_test_hat = reg.predict(X_test)\n",
+    "print('test MAE :', mean_absolute_error(y_test, y_test_hat))\n",
+    "print('test RMSE :', mean_squared_error(y_test, y_test_hat)**0.5)\n",
+    "print('test R_squre :', r2_score(y_test, y_test_hat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
